*Make TPNRD logo bigger so text is more-or-less legible. *Make other logos bigger so they don't look out-of-place *Create a pipe for defaulting value that can either be number or string and might be null or whitespace *add a back button to the well details view on the map explorer

--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -8,27 +8,27 @@
         <div class="row">
             <div class="col no-gutters text-center">
                 <a href="https://tpnrd.org/" alt="" target="_blank">
-                    <img src="assets/main/logos/logo.png" style="height: 55px;;">
+                    <img src="assets/main/logos/logo.png" style="height: 105px;">
                 </a>
             </div>
             <div class="col no-gutters text-center">
                 <a href="https://www.gisc.coop/" alt="" target="_blank">
-                    <img src="assets/main/logos/gisc.png" style="height: 55px;;">
+                    <img src="assets/main/logos/gisc.png" style="height: 105px;">
                 </a>
             </div>
             <div class="col no-gutters text-center">
                 <a href="http://paigewireless.com/" alt="" target="_blank">
-                    <img src="assets/main/logos/paige.png" style="height: 55px;;">
+                    <img src="assets/main/logos/paige.png" style="height: 105px;">
                 </a>
             </div>
             <div class="col no-gutters text-center">
                 <a href="https://www.olsson.com/" alt="" target="_blank">
-                    <img src="assets/main/logos/Olsson_RGB_full-color-01.png" style="height: 55px;;">
+                    <img src="assets/main/logos/Olsson_RGB_full-color-01.png" style="height: 105px;">
                 </a>
             </div>
             <div class="col no-gutters text-center">
                 <a href="https://sitkatech.com/" alt="Sitka Technology Group" target="_blank">
-                    <img src="assets/main/logos/logo_Sitka_white.png" style="height: 55px;">
+                    <img src="assets/main/logos/logo_Sitka_white.png" style="height: 105px;">
                 </a>
             </div>
         </div>
