--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
@@ -1,7 +1,10 @@
 @import "~src/scss/_variables.scss";
 
 .navbarLogo {
-    height: 80px;
+  height: 80px;
+   @media screen and (min-width: 991px )  {
+    height: 180px;
+   }
   }
   
   .footerLogo {
