--- a/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.scss
+++ b/Source/Zybach.Web/src/app/pages/map-explorer/map-explorer.component.scss
@@ -7,6 +7,27 @@
     }
 }
 
+dl {
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0
+  }
+  dt {
+    float: left;
+    width: 50%;
+    min-width:50%;
+    padding: 0;
+    margin: 0
+  }
+  dd {
+    float: left;
+    width: 50%;
+    min-width:50%;
+    padding: 0;
+    margin: 0
+  }
+
 .section-search {
     background-color: $header-nav-color;
 }
